# Achilles

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.cspell/: custom-dictionary-workspace.txt
.devcontainer/: Dockerfile  devcontainer.json
src/control/: actuator.hpp  plant.hpp  plant_state.hpp  robot.hpp
src/control/actuators/: actuator.hpp  angular_actuator.hpp  linear_actuator.hpp
src/control/sensors/: encoder.hpp  i_sensor.hpp
src/control/sensors/distortions/: gaussian_distortion.hpp  i_distortion.hpp  null_distortion.hpp
src/dynamics/: joint_tree.cpp  joint_tree.hpp  link.hpp
src/dynamics/joints/: abstract_joint.hpp  base_joint.hpp  general_joint.hpp  i_joint.hpp  joint.cpp  joint.hpp  planar_joint.cpp  planar_joint.hpp  relolute_joint.cpp  revolute_joint.cpp  revolute_joint.hpp
src/geometry/: frame.hpp  transform.hpp  transform_tree.hpp  transfrom_tree.cpp
src/math/: dual.hpp  id.hpp  quaternion.hpp  quternion.cpp  unit_vector.hpp  vector.hpp
src/math/distributions/: gaussian.hpp  i_distribution.hpp
src/math/drift_processes/: gauss_markov.hpp  i_drift.hpp
src/math/filters/: i_filter.hpp  low_pass.hpp
src/spatial/: inertia.hpp  jerk.hpp  pose.cpp  pose.hpp  surge.hpp  twist.hpp  wrench.hpp
tests/: .clang-tidy  CMakeLists.txt  test_helpers.cpp  test_kinematics.cpp
